redux and some components added

--- a/src/components/TaskDisplayButton/TaskDisplayButton.module.scss
+++ b/src/components/TaskDisplayButton/TaskDisplayButton.module.scss
@@ -10,9 +10,11 @@
     border-radius: 6px;
     cursor: pointer;
     box-shadow: none;
+    margin-bottom: 10px;
     &:hover{
         background-color:#f0f0f0 ;
     }
+
 }
 
 
@@ -28,4 +30,5 @@
     cursor: pointer;
     box-shadow: none;
     border: 1px solid #DEDFE0;
+    margin-bottom: 10px;
 }
