--- a/src/components/TasksDisplay/TasksDisplay.module.scss
+++ b/src/components/TasksDisplay/TasksDisplay.module.scss
@@ -15,4 +15,23 @@
       margin-bottom: 36px;
     }
   }
+
+  .MyClass {
+    position: absolute;
+    left: 5px;
+  }
+  .MyClassEnterActive {
+    left: 15px;
+    transition: left 500ms;
+  }
+  .MyClassEnterDone {
+    left: 15px;
+  }
+  .MyClassExit {
+    left: 15px;
+  }
+  .MyClassExitActive {
+    left: 5px;
+    transition: left 500ms;
+  }
 }
