--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,9 @@
   box-sizing: border-box;
   font-family: 'Segoe UI', sans-serif;
 }
+
+.container {
+  font-family: 'Segoe UI', sans-serif;
+
+  display: flex;
+}
