--- a/src/components/TaskDisplayButton/TaskDisplayButton.module.scss
+++ b/src/components/TaskDisplayButton/TaskDisplayButton.module.scss
@@ -5,12 +5,13 @@
     font-family: 'Segoe UI', sans-serif;
     background-color: transparent;
     transition: 0.3s ease;
-    border: 0;
+    border: 1px solid transparent;
     outline: 0;
     border-radius: 6px;
     cursor: pointer;
     box-shadow: none;
     margin-bottom: 10px;
+
     &:hover{
         background-color:#f0f0f0 ;
     }
