--- a/src/components/TaskDisplayButton/TaskDisplayButton.module.scss
+++ b/src/components/TaskDisplayButton/TaskDisplayButton.module.scss
@@ -1,4 +1,8 @@
 .default{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     width: 100%;
     padding: 8px 12px;
     font-size: 17px;
@@ -14,12 +18,20 @@
 
     &:hover{
         background-color:#f0f0f0 ;
+        
+        .deleteButton {
+            opacity: 1;
+            pointer-events: all;
+        }
     }
-
 }
 
 
 .selected{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     width: 100%;
     padding: 8px 12px;
     font-size: 17px;
@@ -28,8 +40,56 @@
     transition: 0.3s ease;
     outline: 0;
     border-radius: 6px;
-    cursor: pointer;
     box-shadow: none;
     border: 1px solid #DEDFE0;
     margin-bottom: 10px;
+
+    .deleteButton {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
+.deleteButton {
+    display: flex;
+    justify-content: center;
+
+    width: 15px;
+
+    transition: 0.6s ease opacity;
+    pointer-events: none;
+    opacity: 0;
+
+    cursor: pointer;
+
+    .deleteButtonChild {
+        position: relative;
+        height: 17px;
+        width: 2px;
+        background-color: #cacaca;
+    }
+    .deleteButtonChild:first-child {
+        transform: rotate(45deg);
+    }
+    .deleteButtonChild:last-child {
+        right: 1.5px;
+        transform: rotate(-45deg);
+    }
+}
+
+.modalText {
+    text-align: center;
+    margin-bottom: 20px;
+
+    span {
+        font-weight: 600;
+    }
+}
+.modalButtonRow {
+    display: flex;
+    justify-content: space-between;
+
+    .modalButtonWrapper {
+        width: 48%;
+    }
 }
