--- a/src/UI/Button/Button.module.scss
+++ b/src/UI/Button/Button.module.scss
@@ -1,3 +1,5 @@
+@import '../../constants/variables.scss';
+
 .button {
   width: 100%;
 
@@ -6,12 +8,12 @@
   text-align: center;
 
   border-radius: 5px;
-  border: 1px solid #cacaca;
+  border: 1px solid var(--border-color);
 
-  background-color: #fff;
+  background-color: var(--background-primary-color);
 
   font-size: 16px;
-  color: #000000;
+  color: var(--font-color);
 
   cursor: pointer;
   user-select: none;
@@ -19,6 +21,6 @@
   transition: background-color 0.3s ease;
     
   &:hover {
-    background-color: #cacaca;
+    background-color: var(--border-color);
   }
 }
