--- a/src/UI/InputText/InputText.module.scss
+++ b/src/UI/InputText/InputText.module.scss
@@ -1,16 +1,20 @@
+@import '../../constants/variables.scss';
+
 .input {
   width: 100%;
   font-family: 'Segoe UI', sans-serif;
   outline: 0;
 
-  background-color: #fff;
+  background-color: var(--background-primary-color);
   border-radius: 5px;
-  border: 1px solid #cacaca;
+  border: 1px solid var(--border-color);
   font-size: 16px;
   padding: 6px 12px;
 
+  color: var(--font-color);
 
-  &:placeholder {
-    color: #cacaca;
+
+  &::placeholder {
+    color: var(--border-color);
   }
 }
