--- a/src/components/AddButton/AddButton.module.scss
+++ b/src/components/AddButton/AddButton.module.scss
@@ -1,12 +1,14 @@
+@import '../../constants/variables.scss';
+
 .button {
-  background-color: #fff;
-  color: #000;
+  background-color: var(--background-primary-color);
+  color: var(--font-color);
   width: 35px;
   height: 35px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #cacaca;
+  border: 1px solid var(--border-color);
   border-radius: 5px;
   user-select: none;
   cursor: pointer;
@@ -15,7 +17,7 @@
     position: absolute;
     width: 20px;
     height: 2px;
-    background-color: #000;
+    background-color: var(--font-color);
   }
   div:last-child {
     transform: rotate(90deg);
