--- a/src/components/Worskpace/Workspace.module.scss
+++ b/src/components/Worskpace/Workspace.module.scss
@@ -24,6 +24,9 @@
 
     button {
       cursor: pointer;
+      background-color: transparent;
+      border: none;
+      margin: 5px;
     }
   }
 
