--- a/src/components/Worskpace/Workspace.module.scss
+++ b/src/components/Worskpace/Workspace.module.scss
@@ -21,14 +21,21 @@
   }
 
   .buttonGroup {
-    z-index: 1000;
+    z-index: 8;
     cursor: pointer;
+    
+    position: relative;
+    left: -12px;
 
     button {
       cursor: pointer;
       background-color: transparent;
       border: none;
       margin: 5px;
+    }
+
+    svg {
+      fill: var(--font-color)
     }
   }
 
