--- a/src/components/Worskpace/Workspace.scss
+++ b/src/components/Worskpace/Workspace.scss
@@ -18,6 +18,10 @@
       left: 17.5px;
     }
 
+    h1, h2, h3, h4, h5, h6 {
+      font-weight: 600;
+    }
+
     h2 {
       font-size: 28px;
     }
